# projekt_pracownicy

./: .gitignore  output.csv  pyproject.toml  readme.md
src/classes/: employee.py
src/data/: sample_data.json
src/project/: core.py  main.py
tests/test_classes/: test_get_salary_stats.py  test_read_data.py  test_save_data.py
