[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample_project"
version = "0.1.0"
requires-python = ">=3.8"
description = "Homework project"
authors = [
    { name = "Piotr", email = "pieczywek.piotr@gmail.com" }
]
dependencies = [
    "pydantic",
    "argparse"
]

[tool.setuptools.packages.find]
where = ["."]
